Fix css z-index for top bar.

--- a/src/components/AppBar/styles.css
+++ b/src/components/AppBar/styles.css
@@ -7,6 +7,7 @@
   width: 100%;
   box-shadow: 0px 3px 4px 0px #20232a;
   height: 3rem;
+  z-index: 2;
 }
 
 .pointer {
